# fullstack_basico_puc_back

./: .gitignore  Makefile  README.md  app.py  database_manager.py  models.py  pyproject.toml  requirements.txt
blueprints/: clients.py
config/: config.py  swagger.py
controller/: challenge_controller.py
repository/: challenge_repository.py
static/: swagger.json
